--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -4,48 +4,35 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
 </head>
 <body>
 
 <div th:fragment="sidebar" class="col-12 col-sm-3 col-xl-2 px-sm-2 px-0 bg-dark d-flex sticky-top">
     <div class="d-flex flex-sm-column flex-row flex-grow-1 align-items-center align-items-sm-start px-3 pt-2 text-white">
         <a th:href="@{/}" class="d-flex align-items-center pb-sm-3 mb-md-0 me-md-auto text-white text-decoration-none">
-            <span class="fs-5">B<span class="d-none d-sm-inline">rand</span></span>
+            <i class="bi bi-person-arms-up fs-1">
+                <span class="ms-1 d-none d-sm-inline">GTAC</span>
+            </i>
+
         </a>
         <ul class="nav nav-pills flex-sm-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 justify-content-center align-items-center align-items-sm-start" id="menu">
             <li class="nav-item">
-                <a th:href="@{/}" class="nav-link px-sm-0 px-2">
+                <a th:href="@{/}" class="nav-link px-sm-0 px-2" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Accueil">
                     <i class="fs-5 bi-house"></i><span class="ms-1 d-none d-sm-inline">Accueil</span>
                 </a>
             </li>
             <li>
-                <a th:href="@{/mission-types}" class="nav-link px-sm-0 px-2">
+                <a th:href="@{/mission-types}" class="nav-link px-sm-0 px-2" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Type de missions">
                     <i class="fs-5 bi-bullseye"></i><span class="ms-1 d-none d-sm-inline">Type de missions</span></a>
             </li>
             <li>
-                <a th:href="@{/missions}" class="nav-link px-sm-0 px-2">
+                <a th:href="@{/missions}" class="nav-link px-sm-0 px-2" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Missions">
                     <i class="fs-5 bi-bullseye"></i><span class="ms-1 d-none d-sm-inline">Missions</span></a>
             </li>
             <li>
-                <a th:href="@{/volunteers}" class="nav-link px-sm-0 px-2">
+                <a th:href="@{/volunteers}" class="nav-link px-sm-0 px-2" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Bénévoles">
                     <i class="fs-5 bi-people"></i><span class="ms-1 d-none d-sm-inline">Bénévoles</span> </a>
             </li>
-            <!--<li class="dropdown">
-                <a href="#" class="nav-link dropdown-toggle px-sm-0 px-1" id="dropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fs-5 bi-bootstrap"></i><span class="ms-1 d-none d-sm-inline">Bootstrap</span>
-                </a>
-                <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdown">
-                    <li><a class="dropdown-item" href="#">New project...</a></li>
-                    <li><a class="dropdown-item" href="#">Settings</a></li>
-                    <li><a class="dropdown-item" href="#">Profile</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
-                </ul>
-            </li>-->
-
 
         </ul>
         <div class="dropdown py-sm-4 mt-sm-auto ms-auto ms-sm-0 flex-shrink-1">
@@ -64,6 +51,6 @@
         </div>
     </div>
 </div>
-
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
